corrected spacings

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -123,6 +123,7 @@ iframe
 .Fondu0Vers1
 {
     background: linear-gradient(to bottom, Black, #292a2b);
+    height: 100vh;
 }
 
 .Fondu1
